Added facebook comments widget

--- a/package.json
+++ b/package.json
@@ -10,9 +10,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@microsoft/microsoft-graph-client": "^2.0.0",
+    "connect-flash": "^0.1.1",
+    "dotenv": "^8.2.0",
     "ejs": "^3.0.2",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "isomorphic-fetch": "^2.2.1",
     "mdbootstrap": "^4.16.0",
-    "node-fetch": "^2.6.0"
+    "moment": "^2.24.0",
+    "node-fetch": "^2.6.0",
+    "passport": "^0.4.1",
+    "passport-azure-ad": "^4.2.1",
+    "simple-oauth2": "^3.4.0"
   }
 }
